Hadoop MapReduce Change Log

Trunk (unreleased changes)


    MAPREDUCE-279

    Changes for invoking rack resolution in the RM and in the AM (ddas)

    Fix ClassCastException in JobHistoryServer for certain jobs.
    (Siddharth Seth via llu)

    MAPREDUCE-2569. Ensure root queue allocated 100% capacity. (Jonathan
    Eagles via cdouglas)

    Fix NPE in history event handling (siddharth seth via mahadev)

    Job level node blacklisting. (sharad)

    Fixing the bug which was causing FAILED jobs to be displayed as COMPLETED
    on the RM UI. (vinodkv)

    Fixing broken link to logs for container on NM web UI. (vinodkv)

    Miscellaneous UI fixes + source code formatting for
    MR JobHistoryEventHandler. (vinodkv)

    Display failed/killed attempts of the task on MR AM UI
    separately. (vinodkv)

    Changes a couple of usages of FileContext to FileSystem in YarnRunner
    to handle distributed cache path resolutions on non-default filesystems.
    (ddas)

    Fix to exclude images dir into the tar distribution (luke lu via gkesavan)

    Fix more rounding off problems in reduce ramp up. Also fix a bug preventing
    the application of the cap on reduce ramp-up. (Sharad Agarwal via vinodkv)

    Fix rounding off problem in reduce ramp up. (sharad)

    MAPREDUCE-2582. Cleanup JobHistory event generation.(Siddharth Seth via sharad)   
 
    Add ability to includes src files in assembly target for maven (Luke Lu via mahadev)
 
    Added few job diagnostic messages. (sharad)

    Disable Uber AM. (mahadev)

    Intermittent TestMRApp failures on faster Linux desktop (part 2) (Luke lu via mahadev)
    
    Including source files in release distribution (luke lu via mahadev)

    Intermittent TestMRApp failures on faster Linux desktop. (Luke lu via mahadev)

    Added clover in pom dependency. (sharad)

    Sending Job diagnostics from AM to RM and redirect to history-url on job
    completion. (vinodkv and sharadag)
